PRoject2/force-app/main/default/objects/Community_Prediction__c/Community_Prediction__c.object-meta.xml
<CustomObject>
    <label>Community Prediction</label>
    <nameField>
        <label>Community Prediction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Prediction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>