PRoject2/force-app/main/default/objects/Community_Prediction__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Community Confidence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>