PRoject2/force-app/main/default/objects/Community_Prediction__c/fields/Number_of_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Predictions__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Number of Predictions</label>
    <type>AutoNumber</type>
</CustomField>