PRoject2/force-app/main/default/objects/Community_Prediction__c/fields/Number_of_User_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_User_Predictions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of User Predictions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>