PRoject2/force-app/main/default/objects/Community_Prediction__c/fields/Overall_Percentage_Growth__c.field-meta.xml
<CustomField>
    <fullName>Overall_Percentage_Growth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Overall Percentage Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>